kubernetes/archivebox/archivebox.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: archivebox
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: archivebox
  name: archivebox
  namespace: archivebox
spec:
  selector:
    app: archivebox
  ports:
    - name: http
      port: 8000
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archivebox
  namespace: archivebox
spec:
  selector:
    matchLabels:
      app: archivebox
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: archivebox
    spec:
      containers:
        - name: archivebox
          args: ["server"]
          image: archivebox/archivebox
          ports:
            - containerPort: 8000
              protocol: TCP
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
          volumeMounts:
            - mountPath: /data
              name: archivebox
      restartPolicy: Always
      volumes:
        - name: archivebox
          persistentVolumeClaim:
            claimName: archivebox
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: archivebox
  namespace: archivebox
spec:
  ingressClassName: nginx
  rules:
  - host: archivebox.mksybr.com
    http:
      paths:
      - backend:
          service:
            name: archivebox
            port:
              number: 8000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - archivebox.mksybr.com
    secretName: letsencrypt-prod
